# nsu-audit-app

./: .cli-config.json  .gitignore  .token  README.md  api-history.json  api-keys.json  cli.js  cli.py  client_secret_349131024554-d245dnq256i05ggdhdsg4r88tmr6au9q.apps.googleusercontent.com.json  client_secret_871051854278-tgov2na9jbu53n5680n9e3qpdlvh338b.apps.googleusercontent.com.json  convert-pdf.js  debug-page2.py  extract-transcript.py  package-lock.json  package.json  pdf-to-ocr.js  process-images.js  run.js  server.js  start-servers.bat  start.bat  start.ps1  test-extract.py  test-ocr.js  test-ocr.py  test-pdf-convert.py  test-psm.py  test_ocr_direct.py  users.json
controllers/: transcriptController.js
flutter_app/: README.md  pubspec.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
middleware/: apiKeyMiddleware.js  authMiddleware.js  jwtMiddleware.js
mobile/: App.js  app.json  package-lock.json  package.json
mobile-v2/: App.tsx  BUILD.md  README.md  app.json  capacitor.config.json  get-android.bat  index.html  manifest.json  package-lock.json  package.json
nsu-audit-mcp/: Procfile  README.md  build.sh  package.json  pyproject.toml  requirements.txt  run_server.bat  server.py
nsu-audit-mcp/models/: __init__.py  audit_result.py  course.py  student.py
nsu-audit-mcp/services/: api-history.json  audit_logic.py  cert_service.py  history_service.py  ocr_service.py
nsu-audit-mcp/tools/: __init__.py  audit_tools.py  certificate_tools.py  history_tools.py  pdf_tools.py  transcript_tools.py
routes/: transcriptRoutes.js
(+88 files in other folders)
